@@ -3,7 +3,7 @@ author  = Joelle Maslak <jmaslak@antelope.net>
 license = Perl_5
 
 copyright_holder = Joelle Maslak
-copyright_year   = 2016-2019
+copyright_year   = 2016-2021
 
 [AutoVersion]
 major = 2                   ; Since we started autoversioning after 1.x
