@@ -1,4 +1,6 @@
 {{$NEXT}}
+ Joelle Maslak <jmaslak@antelope.net>
+ * Reject IP address octets with leading zeros
 
 2.191190  2019-04-28 22:40:07-06:00 MST7MDT
  Joelle Maslak <jmaslak@antelope.net>
